# zip

./: .gitignore  README.md  data  pyproject.toml  todo
configs/: default.yaml  train.yaml  train_bine.yaml  train_metapath2vec.yaml  train_sageconv.yaml
notebooks/: edge_normalization_analysis.ipynb
scripts/: analyze_edges.py  classify.py  cluster_embeddings.py  cluster_nmf.py  compute_author_embeddings.py  compute_author_embeddings_openai.py  embed_subreddits.py  export_subreddit_embeddings.py  filter_selected_users.py  inference.py  launch_ddp.sh  prepare_data.py  prepare_graph.py  train.py  train_bine.py  train_metapath2vec.py  train_sageconv.py  viz_clusters.py
src/: gnn.py
src/core/: __init__.py  bine.py  clustering.py  data.py  edge_analysis.py  hetero_graph.py  text_embed.py
