[project]
name = "reddit-bine"
version = "0.1.0"
description = "BiNE embeddings for Reddit bipartite graph with power-law TF–IDF edges and LiteLLM/Azure subreddit init"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Research Team" }
]

dependencies = [
  "torch>=2.2",
  "torch-geometric>=2.5.0",
  "polars>=0.20.19",
  "pyarrow>=14.0.0",
  "omegaconf>=2.3.0",
  "wandb>=0.16.0",
  "litellm>=1.48.0",
  "tqdm>=4.66.0",
  "numpy>=1.24.0",
  "PyYAML>=6.0.1"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
